--- a/scai/sparsekernel/CMakeLists.txt
+++ b/scai/sparsekernel/CMakeLists.txt
@@ -34,55 +34,15 @@
 
 ## Define name of the SCAI module project
 
-set ( MODULE_NAME sparsekernel )
+scai_module(
 
-set ( INTERNAL_DEPS common logging tracing tasking hmemo kregistry blaskernel utilskernel ) 
-set ( EXTERNAL_DEPS OpenMP CUDA MIC SCAI_BLAS ) 
-
-## Define all library names with the (global) prefix SCAI_LIBRARY_PREFIX
-
-set ( PROJECT_NAME "${SCAI_LIBRARY_PREFIX}${MODULE_NAME}" )
-
-### find all external packages via the provided wrappers of CMake modules
-
-foreach ( module ${EXTERNAL_DEPS} )
-    include( Package/${module} )
-endforeach ()
-
-### finalize build flags
-include ( ConcludeFlags )
-
-### add definitions
-### add definitions
-
-include ( Settings/logging )
-include ( Settings/tracing )
-
-add_definitions( ${ADDITIONAL_WARNING_FLAGS} )
-add_definitions ( -DSCAI_LOGGING_LEVEL_${SCAI_LOGGING_LEVEL} )
-add_definitions ( -DSCAI_ASSERT_LEVEL_${SCAI_ASSERT_LEVEL} )
-add_definitions ( -DSCAI_TRACING_${SCAI_TRACING} )
-
-if ( SCAI_OMP_SCHEDULE_FLAG )
-    add_definitions ( -D${SCAI_OMP_SCHEDULE_FLAG} )
-endif ( SCAI_OMP_SCHEDULE_FLAG )
-
-if    ( WIN32 )
-    add_definitions ( -DCOMMON_COMPILING_DLL )
-endif ( WIN32 )
-
-## Project System-Include
-include_directories ( ../.. ${CMAKE_BINARY_DIR}/include )
-
-### add includes for external packages
-
-foreach ( module ${EXTERNAL_DEPS} )
-    string ( TOUPPER ${module} upper_module )
-    include_directories( ${SCAI_${upper_module}_INCLUDE_DIR} )
-endforeach ()
-
+    MODULE_NAME   sparsekernel
+    INTERNAL_DEPS common logging tracing tasking hmemo kregistry blaskernel utilskernel 
+    EXTERNAL_DEPS OpenMP CUDA MIC SCAI_BLAS 
+)
 
 ### Add classes/headers to source files CXX_SOURCES, CXX_HEADERS, ...
+
 scai_project (
 
     CLASSES                  # .cpp, .hpp
@@ -102,32 +62,7 @@ scai_project (
 
 ## add subdirectories
 
-if    ( CUDA_FOUND AND USE_CUDA )
-    add_subdirectory ( cuda )
-    cuda_compile ( CUDA_FILES ${CUDA_SOURCES} )
-    set ( CXX_SOURCES ${CXX_SOURCES} ${CUDA_FILES} )
-endif ( CUDA_FOUND AND USE_CUDA )
-
-if    ( BUILD_EXAMPLES )
-add_subdirectory ( examples )
-endif ( BUILD_EXAMPLES )
-
-add_subdirectory ( external )
-
-if ( USE_MIC )
-    add_subdirectory ( mic )
-endif ( USE_MIC )
-
-add_subdirectory ( openmp )
-
-if    ( FOUND_BOOST_TEST AND BUILD_TEST )
-    add_subdirectory ( test )
-endif ( FOUND_BOOST_TEST AND BUILD_TEST )
-
-### set link directories ###
-if ( WIN32 )
-    link_directories ( ${Boost_LIBRARY_DIRS} )
-endif ( WIN32 )
+scai_subdirectories( cuda examples external mic openmp test )
 
 ### add library ###
 
@@ -135,7 +70,8 @@ scai_library()
 
 if ( USE_MIC )
     set ( MKLROOT $ENV{MKLROOT} )
-    set ( CMAKE_SHARED_LINKER_FLAGS ${CMAKE_SHARED_LINKER_FLAGS} "-offload-option,mic,compiler,\"-L${MKLROOT}/lib/mic -Wl,--start-group -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core -Wl,--end-group\"" )
+    set ( CMAKE_SHARED_LINKER_FLAGS ${CMAKE_SHARED_LINKER_FLAGS} 
+          "-offload-option,mic,compiler,\"-L${MKLROOT}/lib/mic -Wl,--start-group -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core -Wl,--end-group\"" )
     #ToDo: set_target_properties not working, any better way?
 endif ( USE_MIC )
 
