--- a/scai/utilskernel/CMakeLists.txt
+++ b/scai/utilskernel/CMakeLists.txt
@@ -32,56 +32,17 @@
  # @date 18.02.2016
 ###
 
-## Define name of the SCAI module project
+## Define name of the SCAI module project and its dependencies
 
-set ( MODULE_NAME utilskernel )
+scai_module(
 
-set ( INTERNAL_DEPS common logging tracing tasking hmemo kregistry blaskernel ) 
-set ( EXTERNAL_DEPS OpenMP CUDA MIC ) 
-
-## Define all library names with the (global) prefix SCAI_LIBRARY_PREFIX
-
-set ( PROJECT_NAME "${SCAI_LIBRARY_PREFIX}${MODULE_NAME}" )
-
-### find all external packages via the provided wrappers of CMake modules
-
-foreach ( module ${EXTERNAL_DEPS} )
-    include( Package/${module} )
-endforeach ()
-
-### finalize build flags
-include ( ConcludeFlags )
-
-### add definitions
-
-include ( Settings/logging )
-include ( Settings/tracing )
-
-add_definitions( ${ADDITIONAL_WARNING_FLAGS} )
-add_definitions ( -DSCAI_LOGGING_LEVEL_${SCAI_LOGGING_LEVEL} )
-add_definitions ( -DSCAI_ASSERT_LEVEL_${SCAI_ASSERT_LEVEL} )
-add_definitions ( -DSCAI_TRACING_${SCAI_TRACING} )
-
-if ( SCAI_OMP_SCHEDULE_FLAG )
-    add_definitions ( -D${SCAI_OMP_SCHEDULE_FLAG} )
-endif ( SCAI_OMP_SCHEDULE_FLAG )
-
-if    ( WIN32 )
-    add_definitions ( -DCOMMON_COMPILING_DLL )
-endif ( WIN32 )
-
-## Project System-Include
-
-include_directories ( ../.. ${CMAKE_BINARY_DIR}/include )
-
-### add includes for external packages
-
-foreach ( module ${EXTERNAL_DEPS} )
-    string ( TOUPPER ${module} upper_module )
-    include_directories( ${SCAI_${upper_module}_INCLUDE_DIR} )
-endforeach ()
+    MODULE_NAME   utilskernel
+    INTERNAL_DEPS common logging tracing tasking hmemo kregistry blaskernel
+    EXTERNAL_DEPS OpenMP CUDA MIC
+)
 
 ### Add classes/headers to source files CXX_SOURCES, CXX_HEADERS, ...
+
 scai_project (
 
     CLASSES                  # .cpp, .hpp
@@ -97,37 +58,9 @@ scai_project (
         SparseKernelTrait
 )
 
-
 ## add subdirectories
 
-if    ( CUDA_FOUND AND USE_CUDA )
-    add_subdirectory ( cuda )
-    cuda_compile ( CUDA_FILES ${CUDA_SOURCES} )
-    set ( CXX_SOURCES ${CXX_SOURCES} ${CUDA_FILES} )
-endif ( CUDA_FOUND AND USE_CUDA )
-
-if    ( BUILD_EXAMPLES )
-    add_subdirectory ( examples )
-endif ( BUILD_EXAMPLES )
-
-add_subdirectory ( mepr )
-
-if ( USE_MIC )
-    add_subdirectory ( mic )
-    # ToDo: this is currently just a workaround to fix a symbol error
-    SET_SOURCE_FILES_PROPERTIES( HArrayUtils.cpp PROPERTIES COMPILE_FLAGS -no-offload )
-endif ( USE_MIC )
-
-add_subdirectory ( openmp )
-
-if ( FOUND_BOOST_TEST AND BUILD_TEST )
-    add_subdirectory ( test )
-endif ( FOUND_BOOST_TEST AND BUILD_TEST )
-
-### set link directories ###
-if ( WIN32 )
-    link_directories ( ${Boost_LIBRARY_DIRS} )
-endif ( WIN32 )
+scai_subdirectories( cuda examples mepr mic openmp test )
 
 ## Define library via macro using MODULE_NAME, INTERNAL_DEPS, EXTERNAL_DEPS
 ## and global variables SCAI_LIBRARY_PREFIX, SCAI_VERSION, ....
